
=======
Changes
=======


0.31. (*unrelease*)
=====================

 - Fix GH-#171 Passing environment variables to CmdAction
 - cmdparse now support getting values from OS enviroment variables
 - option `seek_file` control by ENV var `DOIT_SEEK_FILE`

0.30.3 (*2017-02-20*)
=====================

 - Revert usage of setuptools enviroment markers (feature too new)


0.30.2 (*2017-02-16*)
=====================

 - Fix dependency on `pathlib` from PyPi


0.30.1 (*2017-02-16*)
=====================

 - Fix GH-#159 KeyError on doit list --status when missing file dependency
 - add python3.6 support


0.30.0 (*2016-11-22*)
=====================

 - BACKWARD INCOMPATIBLE: #112 drop python2 compatibility
 - GH-#94: option to read output from CmdAction line or byte buffered
 - GH-#114: `file_dep`, `targets` and `CmdAction` support pathlib.
 - fix GH-#100: make cmd `completion` output deterministic
 - fix GH-#99: positional argument on tasks not specified from cmd-line
 - fix GH-#97: `list` command does not display task-doc for `DelayedTask`
                when `creates` is specified
 - fix GH-#131: race condition in doit.tools.create_folder
 - fix `auto` command on OS-X systems
 - fix GH-#117: Give error when user tries to use equal sign on task name



0.29.0 (*2015-08-16*)
=====================

 - BACKWARD INCOMPATIBLE: revert - `result_dep` to create an implicit `task_dep`
 - fix GH-#59: command `list` issue with unicode names
 - fix GH-#72: cmd `completion` escaping of apostrophes in zsh
 - fix GH-#74: Task action's handle python3 callables with keyword only args
 - fix GH-#50: Executing tasks in parallel (multi-process) fails on Windows
 - fix GH-#71 #92: Better error messages for invalid command line tasks/commands
 - fix issue with `--always-execute` and `setup` tasks
 - GH-#67: multiprocess runner handles closures in tasks (using cloudpickle)
 - GH-#58: add `DelayedLoader` parameter `target_regex`
 - GH-#30: add `DelayedLoader` parameter `creates`