@@ -5,7 +5,6 @@ branches:
     - test
 environment:
   matrix:
-    - PYTHON: "C:/Python33"
     - PYTHON: "C:/Python34"
     - PYTHON: "C:/Python35"
     - PYTHON: "C:/Python36"
